------------------------------------------------------------------------------
name:          xmonad-build
version:       0.13
synopsis:      XMonad Build
homepage:      http://xmonad.org
license:       BSD2
license-file:  LICENSE
author:        Peter Jones <pjones@devalot.com>
maintainer:    Peter Jones <pjones@devalot.com>
copyright:     Copyright (c) 2016,2017 Peter J. Jones
category:      Graphics
build-type:    Simple
cabal-version: >=1.8

------------------------------------------------------------------------------
executable xmonad-build
  main-is: xmonad.hs
  ghc-options: -Wall -fno-warn-missing-signatures
  build-depends:
                base
              , containers
              , xmonad
              , xmonad-contrib
              , xmonad-extras
